--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title ng-bind="'Fun Retro &mdash; ' + boardId">Fun Retro</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -11,232 +10,16 @@
     <script src="dist/main.js"></script>
   </head>
   <body ng-controller="MainCtrl">
-    <header ng-show="userId !== ''">
-        <h1>Fun Retro</h1>
-        <span>
-            <span class="prime">
-              <i class="fa fa-star"></i>
-              Prime Directive
-              <span>
-                <blockquote>
-                  <p>Regardless of what we discover, we understand and truly believe that everyone did the best job he or she could, given what was known at the time, his or her skills and abilities, the resources available and the situation at hand</p>
-                  <footer>In Project Retrospectives, Norm Kerth</footer>
-                </blockquote>
-              </span>
-            </span>
-            <button id="copy-board" ng-click="utils.openDialogCopyBoard(this)">Export board</button>
-            <button class="first" ng-click="utils.openDialogBoard(this)">New board</button>
-        </span>
-    </header>
-    <div class="menu">
-      <h2>{{boardId}}</h2>
-      <label>Sort by</label>
-      <select ng-model="sortField">
-        <option value="$id">Created date</option>
-        <option value="votes">Votes</option>
-      </select>
-      <button class="pull-right" ng-show="board.columns.length < 6" ng-click="utils.openDialogColumn(this)">New column</button>
-      <button class="pull-right delete-button" ng-click="utils.openDialogDeleteCards(this)">Delete cards</button>
-    </div>
-    <input ng-show="userId !== ''" id="board-context" ng-model="boardContext" ng-change="changeBoardContext()" placeholder="Set the context of the retrospective here..." />
-    <span class="container">
-        <span ng-show="boardId !== ''" class="message-list" ng-repeat="type in board.columns">
-            <ul class="column column_{{ type.id }}">
-              <div class="column-header">
-                <a class="controls delete" ng-show="utils.showRemoveColumn(type.id, board.columns) && !editing" href="javascript:void(0)" ng-click="utils.openDialogDeleteColumn(this)"><i class="fa fa-times"></i></a>
-                <h2 ng-show="!editing" ng-click="editing = true; newName=type.value;">
-                  {{type.value}}
-                </h2>
-                <a ng-show="!editing" class="add" ng-click="addNewMessage(type)" href="javascript:void(0)"><i class="fa fa-plus"></i></a>
-              </div>
-              <div class="editing-column" ng-show="editing">
-                  <input id="new_name_{{ type.id }}" ng-model="newName"></input>
-                  <div>
-                    <button ng-click="changeColumnName(type.id, newName)" class="success-button">Save</button>
-                    <a class="blue" ng-click="editing=false;">Cancel</a>
-                  </div>
-              </div>
-              <li ng-controller="MessageCtrl" id="{{ message.$id }}" enter-click class="message" ng-class="{'flip': isEditing}" ng-repeat="message in messages | filter: {type: {id: type.id}} | orderBy: sortField:getSortOrder()">
-                <div messageId="{{ message.$id }}" x-lvl-draggable="true" x-lvl-drop-target="true" x-on-drop="droppedEvent(dragEl, dropEl)">
-                  <div class="front">
-                      <div class="message-body">
-                          <div class="text">{{message.text}}</div>
-                          <a href="javascript:void(0)" class="pencil" ng-click="isEditing = true; utils.focusElement(message.$id);"><i class="fa fa-pencil"></i></a>
-                      </div>
-                      <div class="votes">
-                          <a ng-hide="utils.alreadyVoted(message.$id)" href="javascript:void(0)" ng-click="toggleVote(message.$id, message.votes)">
-                              <i class="fa fa-thumbs-o-up"></i>
-                          </a>
-                          <strong><a ng-show="utils.alreadyVoted(message.$id)" href="javascript:void(0)" ng-click="toggleVote(message.$id, message.votes)"><i class="fa fa-thumbs-o-down"></i> </a>+ {{ message.votes }}</strong>
-                      </div>
-                  </div>
-                  <div class="back">
-                      <div class="message-body">
-                          <div class="editing">
-                              <textarea ng-model="message.text" ng-change="messages.$save(message)"></textarea>
-                              <a class="delete-link" href="javascript:void(0)" ng-click="utils.openDialogDeleteCard(this)"><i class="fa fa-trash"></i></a>
-                              <button ng-click="isEditing = false;">DONE</button>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="placeholder">
-                    {{ message.text }}
-                  </div>
-                </div>
-              </li>
-            </ul>
-        </span>
-    </span>
-    <div class="spinner" ng-show="loading">
-        <div class="overlay"></div>
-        <div class="rect rect1"></div>
-        <div class="rect rect2"></div>
-        <div class="rect rect3"></div>
-        <div class="rect rect4"></div>
-        <div class="rect rect5"></div>
-    </div>
-    <div ng-show="showNotification()" class="overlay" ng-cloak></div>
-    <div ng-show="showNotification()" class="feature-notification" ng-cloak>
-      <i class="fa fa-times" ng-click="seeNotification()"></i>
-      <span class="title">We're happy to announce new features!</span>
-      <span class='feature'>
-        <h3>Merge cards</h3>
-        <img src="img/merge.png" />
-      </span>
-      <span class='feature'>
-        <h3>Set the context</h3>
-        <img src="img/image1.png" />
-      </span>
-      <span class='feature'>
-        <h3>Prime Directive</h3>
-        <img src="img/image2.png" />
-      </span>
-      <button ng-click="seeNotification()">Got it!</button>
-    </div>
-    <div class="home" ng-show="userId === ''" ng-cloak>
-    <section>
-      <h1><img src="img/logo.png" />Fun Retrospectives</h1>
-      <button ng-click="utils.openDialogBoard(this)">NEW BOARD</button>
-      <style type="text/css">
-        #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-      </style>
-      <div id="mc_embed_signup">
-        <form action="//funretrospectives.us13.list-manage.com/subscribe/post?u=a1df66d58e9447064d73bf0bc&amp;id=405856384a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-          <div id="mc_embed_signup_scroll">
-            <div class="mc-field-group">
-              <input type="email" value="" name="EMAIL" placeholder="Enter your email address" class="required email" id="mce-EMAIL">
-              <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button second">
-            </div>
-            <div id="mce-responses" class="clear">
-              <div class="response" id="mce-error-response" style="display:none"></div>
-              <div class="response" id="mce-success-response" style="display:none"></div>
-            </div>
-            <div style="position: absolute; left: -5000px;" aria-hidden="true">
-              <input type="text" name="b_a1df66d58e9447064d73bf0bc_405856384a" tabindex="-1" value="">
-            </div>
-
-          </div>
-        </form>
-      </div>
-      <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
-      <script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-    </section>
-    <section class="step">
-      <h2>Set the context</h2>
-      <img src="img/image1.png"/>
-      <p>
-Why is this retrospective being held? What will it cover? Retrospectives, similarly to any other meeting, are more effective if the participants align their expectations before getting into it.
-      </p>
-    </section>
-    <section class="step">
-      <h2>
-        Read the prime directive
-      </h2>
-<p class="left">The statement is invaluable for setting the meeting tone. Make it visible to all participants, and read it out loud before running your retrospective activity.</p>
-<img src="img/image2.png"/>
-    </section>
-    <section class="step">
-      <h2>
-        Go for it!
-      </h2>
-      <img src="img/image3.png"/>
-      <p>
-It is time to gather data, talk about the positive stuff, recognize people and seek improvements. Select an activity, create and customize your board. Go for it!
-      </p>
-    </section>
-    <section>
-      <button class="alone" ng-click="utils.openDialogBoard(this)">NEW BOARD</button>
-    </section>
-    </div>
-    <footer>
-      Fun Retro
-      <iframe src="https://ghbtns.com/github-btn.html?user=funretro&repo=distributed&type=star&count=true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
-    </footer>
+    <div ng-include="'components/header.html'"></div>
+    <div ng-include="'components/menu.html'"></div>
+    <div ng-include="'components/boardContext.html'"></div>
+    <div ng-include="'components/mainContent.html'"></div>
+    <div ng-include="'components/spinner.html'"></div>
+    <div ng-include="'components/newFeatureNotification.html'"></div>
+    <div ng-include="'components/mainPage.html'"></div>
+    <div ng-include="'components/footer.html'"></div>
   </body>
-  <script type="text/ng-template" id="deleteCards">
-    <p class="header">Danger Zone</p>
-    <p>Are you sure you want to delete all cards?</p>
-    <p>Once you delete all cards, there is no going back. Please be certain.</p>
-    <button class="delete-button" ng-click="deleteCards()">Delete</button>
-    <a ng-click="utils.closeAll()">Cancel</a>
-  </script>
-  <script type="text/ng-template" id="copyBoard">
-    <h1>Export Board</h1>
-    <p>Select cards text with mouse and copy it</p>
-    <p class="copy-text" ng-bind-html="getBoardText()"></p>
-    <button ng-click="utils.closeAll()">Close</button>
-  </script>
-  <script type="text/ng-template" id="addNewColumn">
-    <h1>New column</h1>
-    <input ng-model="newColumn" type="text"></input>
-    <button ng-click="addNewColumn(newColumn); newColumn='';">Add</button>
-  </script>
-  <script type="text/ng-template" id="addNewBoard">
-    <h1>New board</h1>
-    <p>Board name example: <strong>team-board-123</strong></p>
-    <input ng-model="newBoard.name" ng-change="boardNameChanged()" type="text" placeholder="Board name"></input>
-    <button ng-click="createNewBoard()">Create</button>
-  </script>
-  <script type="text/ng-template" id="deleteCard">
-    <h1>Delete note</h1>
-    <p>Are you sure you want to delete this note?</strong></p>
-    <button class="delete-button" ng-click="deleteMessage(message)">Delete</button>
-    <a ng-click="utils.closeAll()">Cancel</a>
-  </script>
-  <script type="text/ng-template" id="deleteColumn">
-    <h1>Delete column</h1>
-    <p>Are you sure you want to delete this column?</strong></p>
-    <button class="delete-button" ng-click="deleteLastColumn()">Delete</button>
-    <a ng-click="utils.closeAll()">Cancel</a>
-  </script>
-  <script type="text/ng-template" id="mergeCards">
-    <h1>Merge cards</h1>
-    <p>Are you sure you want to merge these two cards?</strong></p>
-    <button ng-controller="MessageCtrl" class="delete-button" ng-click="dropped(dragEl, dropEl)">Merge</button>
-    <a ng-click="utils.closeAll()">Cancel</a>
-  </script>
-  <script>
-    UserVoice=window.UserVoice||[];(function(){var uv=document.createElement('script');uv.type='text/javascript';uv.async=true;uv.src='//widget.uservoice.com/2TTb5A61iTENpz6Gmnq93w.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(uv,s)})();
-
-    UserVoice.push(['set', {
-      accent_color: '#448dd6',
-      trigger_color: 'white',
-      trigger_background_color: '#448dd6'
-    }]);
-
-    UserVoice.push(['identify', {}]);
-
-    UserVoice.push(['addTrigger', {mode: 'smartvote', trigger_position: 'bottom-right' }]);
-
-    UserVoice.push(['autoprompt', {}]);
-  </script>
-  <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-66141519-1', 'auto');
-      ga('send', 'pageview');
-  </script>
+  <div ng-include="'components/dialogs.html'"></div>
+  <div ng-include="'components/userVoice.html'"></div>
+  <div ng-include="'components/analytics.html'"></div>
 </html>
