--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title ng-bind="'Fun Retro &mdash; ' + boardId">Fun Retro</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="vendor.css">
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="css/vendor.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <script src="vendor.js"></script>
     <script src="main.js"></script>
   </head>
