Changed directives to be elements or attributes

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <script src="main.js"></script>
   </head>
   <body ng-controller="MainCtrl">
-    <div page-header></div>
-    <div menu></div>
-    <div board-context></div>
-    <div main-content></div>
-    <div spinner></div>
-    <div new-feature-notification></div>
-    <div main-page></div>
-    <div page-footer></div>
+    <spinner></spinner>
+    <header page-header></header>
+    <nav menu></nav>
+    <board-context></board-context>
+    <main main-content></main>
+    <main-page></main-page>
+    <page-footer></page-footer>
+    <new-feature-notification></new-feature-notification>
+    <dialogs></dialogs>
   </body>
-  <div dialogs></div>
-  <div user-voice></div>
-  <div analytics></div>
+  <user-voice></user-voice>
+  <analytics></analytics>
 </html>
