Add basic angular app. Start dev server from app directory

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Fun Retrospectives</title>
   </head>
-  <body>
+  <body ng-app="fireideaz">
     <h1>Fun Retrospectives</h1>
   </body>
   <script src="bundle.js"></script>
