--- a/index.html
+++ b/index.html
@@ -11,16 +11,23 @@
     <script src="main.js"></script>
   </head>
   <body ng-controller="MainCtrl">
-    <spinner></spinner>
-    <header page-header></header>
+    <div page-header></div>
     <nav menu></nav>
     <board-context></board-context>
     <main main-content></main>
     <main-page></main-page>
     <page-footer></page-footer>
     <new-feature-notification></new-feature-notification>
+    <spinner></spinner>
     <dialogs></dialogs>
   </body>
   <user-voice></user-voice>
-  <analytics></analytics>
+  <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-66141519-1', 'auto');
+      ga('send', 'pageview');
+  </script>
 </html>
