--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/vendor.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <script src="https://www.gstatic.com/firebasejs/3.8.0/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyDKlqYdC-wUUOT7E7aRmRtEDtK6N8CAZ3U",
+        authDomain: "fun-retro-6216f.firebaseapp.com",
+        databaseURL: "https://fun-retro-6216f.firebaseio.com",
+        projectId: "fun-retro-6216f",
+        storageBucket: "fun-retro-6216f.appspot.com",
+        messagingSenderId: "741022796633"
+      };
+      firebase.initializeApp(config);
+    </script>
     <script src="vendor.js"></script>
     <script src="main.js"></script>
   </head>
