Adding about me page

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script src="vendor.js"></script>
     <script src="main.js"></script>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
   <body ng-controller="MainCtrl">
     <div page-header></div>
     <nav menu></nav>
     <board-context></board-context>
+    <div about></div>
     <main main-content></main>
     <main-page></main-page>
     <spinner></spinner>
