--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script src="vendor.js"></script>
     <script src="main.js"></script>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
   <body ng-controller="MainCtrl">
     <div page-header></div>
@@ -16,6 +17,7 @@
     <board-context></board-context>
     <main main-content></main>
     <main-page></main-page>
+    <div about></div>
     <spinner></spinner>
     <dialogs></dialogs>
   </body>
