Adding material sidebar

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <board-context></board-context>
     <main main-content></main>
     <main-page></main-page>
+    <sidebar></sidebar>
     <div about></div>
     <spinner></spinner>
     <dialogs></dialogs>
