--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="vendor.js"></script>
     <script src="main.js"></script>
     <script async defer src="https://buttons.github.io/buttons.js"></script>
-    <script src="https://cdn.rawgit.com/glauberramos/emoji-picker/8911ec1a/emojiPicker.js"></script>
+    <script src="https://cdn.rawgit.com/glauberramos/vanilla-emoji-picker/master/dist/emojiPicker.min.js"></script>
   </head>
   <body ng-controller="MainCtrl">
     <div page-header></div>
